--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
 
 		<div class="row">
-			<h1 class="big-4 id="experience-section"">Experience</h1>
+			<h1 class="big-4" id="experience-section" >Experience</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
