--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-			<p><a href="#" class="btn btn-primary py-3 px-4">Download</a> 
+			<p><a href="https://drive.google.com/file/d/169LeCqwahTP8ku-D4_8Gsa9PCOXxcKEf/view?usp=sharing" class="btn btn-primary py-3 px-4">Download</a> 
           </div>
         </div>
 
@@ -515,7 +515,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/169LeCqwahTP8ku-D4_8Gsa9PCOXxcKEf/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
