--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 										<p><span class="title-s">Name: </span> <span>Om Bagul</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Salesforce Developer</span></p>
 										<p><span class="title-s">Experience: </span> <span>Fresher</span></p>
-										<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
+										<p><span class="title-s">Address: </span> <span>Nashik, Maharashtra</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -488,7 +488,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Hyderabad, India</p>
+	            <p>	Nashik, Maharashtra</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
