--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">ombagul882gmail.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">ombagul882@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
