--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 			<div class="col-md-12 text-center">
 				<footer>
 					<p>&copy; 2024 Om Bagul. All rights reserved.</p>
-					<p>Designed and Developed by Anas</p>
+					<p>Designed and Developed by Om Bagul</p>
 					<p>
 						<a href="mailto:ombagul882@gmail.com">Contact Me</a> |
 						<a href="https://www.linkedin.com/in/omrbagul" target="_blank">LinkedIn</a> |
